src/css/sidebar.css
.sidebar {
  background-color: var(--sidebar);
  padding: 1.2rem 1rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.sidebar__title {
  font-size: 1.2rem;
  color: var(--heading);
}

.projects-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--text);
}

.add-project {
  background-color: var(--primary);
  color: var(--surface);
  border: none;
  border-radius: 1.25rem;
  padding: 0.5rem 0.8rem;
  cursor: pointer;
}

.add-project:hover {
  background-color: var(--primary-hover);
}

.project-list {
  margin: 0;
  padding: 0;
  list-style: none;
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 1rem;
}

.project {
  grid-column: span 1;
  padding: 0.8rem;
  color: var(--text);
  border: 0.0625rem solid var(--border);
  border-radius: 0.625rem;
  cursor: pointer;
}

.project:last-child:nth-child(odd) {
  grid-column: span 2;
}

.project--active {
  background-color: var(--primary);
  color: var(--surface);
}

